<resources>
    <string name="app_name">countdownv2</string>
    <string name="workout_duration_label">Workout duration (seconds)</string>
    <string name="workout_duration_hint">Enter workout duration in seconds</string>
    <string name="rest_duration_label">Rest duration (seconds)</string>
    <string name="rest_duration_hint">Enter rest duration in seconds</string>
    <string name="number_of_intervals_label">Number of intervals</string>
    <string name="number_of_intervals_hint">Enter number of intervals</string>
    <string name="start_button_label">Start</string>
</resources>